Gameboard updates when clicked. Do not allow clicking on spaces that have already been clicked.

--- a/src/components/TicTacToe.scss
+++ b/src/components/TicTacToe.scss
@@ -35,6 +35,9 @@ $boxLength: 75px;
       }
     }
   }
+  &-square {
+    text-transform: uppercase;
+  }
   &-square--x {
     color: $mshRed;
   }
