--- a/src/styles/resets.scss
+++ b/src/styles/resets.scss
@@ -1,3 +1,5 @@
+@import './colors';
+
 * {
   padding: 0;
   margin: 0;
@@ -6,8 +8,13 @@
 
 html, body {
   height: 100%;
-  padding: 20px;
   font-family: "Droid Sans", Helvetica, sans-serif;
+  color: $mshBlack;
+}
+
+a:link {
+  text-decoration: none;
+  cursor: pointer;
 }
 
 ul {
