--- a/src/components/TicTacToe/TicTacToeNewGameOverlay.scss
+++ b/src/components/TicTacToe/TicTacToeNewGameOverlay.scss
@@ -32,6 +32,7 @@
     background: $mshOrange;
     transition: all 1000ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
     box-shadow: 4px 4px 2px lighten($mshBlack, 20%);
+    color: $mshBlack;
     &:hover {
       background: darken($mshOrange, 15%);
     }
