Enable highlighting of winning squares

--- a/src/components/TicTacToe/TicTacToeNewGameOverlay.scss
+++ b/src/components/TicTacToe/TicTacToeNewGameOverlay.scss
@@ -17,6 +17,7 @@
     background: $mshBlue;
     border-radius: 15px;
     transform: translate(400px, 200px);
+    box-shadow: 8px 8px 8px $mshBlack;
     padding: 20px;
     display: flex;
     flex-direction: column;
