--- a/src/components/TicTacToe/TicTacToe.scss
+++ b/src/components/TicTacToe/TicTacToe.scss
@@ -37,11 +37,24 @@ $boxLength: 75px;
   }
   &-square {
     text-transform: uppercase;
+    transition: all 1000ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+    cursor: pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    &:hover {
+      background: $mshOrange;
+    }
   }
   &-square--x {
     color: $mshRed;
   }
   &-square--o {
     color: $mshBlue;
+  }
+  &-square--winner {
+    background: lighten($mshTeal, 20%);
   }
 }
